# dpay

./: .update-locales.sh  LICENSE  MANIFEST.in  README.rst  pretixplugin.toml
.github/workflows/: style.yml  tests.yml
dpay/: Makefile  pyproject.toml  setup.cfg
dpay/dpay/: __init__.py  apps.py  payment.py  signals.py
dpay/locale/de_Informal/LC_MESSAGES/: django.po
